# linggen-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  linggen-agent.runtime.toml  linggen-agent.toml  test.json  test2.json
.codex/environments/: environment.toml
.cursor/rules/: linggen.md
.wrangler/cache/: wrangler-account.json
agents/: coder.md  debugger.md  explorer.md  general.md  lead.md  ling.md  linggen-guide.md  mission.md  plan.md  search.md
doc/: Learn_From_CC.md  agent-spec.md  agentic-loop.md  agents.md  chat-spec.md  cli.md  code-review-2026-04-06.md  code-style.md  events.md  framework.md  insight.md  log-spec.md  memory-spec.md  mission-spec.md  models.md  multi-agents.md  permission-spec.md  plan-spec.md  product-spec.md  proxy-spec.md  room-spec.md  session-spec.md  skill-spec.md  skills.md  storage-spec.md  storage.md  test.md  tool-spec.md  tools.md  webrtc-spec.md
prompts/: nudge-invalid-json.md  nudge-plan-only.md  nudge-redundant-tool.md  nudge-repetition.md  plan-execute.md  plan-mode.md  response-format.md  response-format.toml  system-prompt.toml  task-bootstrap.md  tool-result.toml
scripts/: Dockerfile.linux  build-linux.sh  build-mac.sh  build.sh  lib-common.sh  release.sh  sync-version.sh
src/: anthropic.rs  check.rs  claude_auth.rs  codex_auth.rs  config.rs  credentials.rs  logging.rs  main.rs  ollama.rs  openai.rs  paths.rs  prompts.rs  repl.rs  tui_client.rs  util.rs  workspace.rs
src/agent_manager/: locks.rs  mod.rs  models.rs  proxy_provider.rs  routing.rs
src/cli/: daemon.rs  doctor.rs  index_cmd.rs  init.rs  login.rs  memory_client.rs  mod.rs  self_update.rs  skills_cmd.rs  status.rs
src/db/: mod.rs
src/engine/: actions.rs  capabilities.rs  capability_tools.rs  context.rs  dispatch.rs  memory.rs  mod.rs  patch.rs  permission.rs  plan.rs  prompt.rs  prompt_profile.rs  render.rs  session_policy.rs  skill_tool.rs  streaming.rs  tool_exec.rs  tool_registry.rs  tools.rs  types.rs  web_fetch.rs  web_search.rs
src/eval/: grader.rs  mod.rs  report.rs  runner.rs
src/project_store/: missions.rs  mod.rs  path_encoding.rs  runs.rs
src/server/: agent_api.rs  chat_api.rs  chat_helpers.rs  config_api.rs  idle_scheduler.rs  marketplace_api.rs  memory_api.rs  mission_scheduler.rs  missions_api.rs  mod.rs  projects_api.rs  storage_api.rs  workspace_api.rs
src/tui/: app.rs  (+4 more)
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui-sdk/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+175 files in other folders)
