[package]
name = "linggen"
version = "0.9.1"
edition = "2021"

[[bin]]
name = "ling"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ignore = "0.4"
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "cookies"] }
uuid = { version = "1", features = ["v4"] }
headless_chrome = "1.0"
base64 = "0.22"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
toml = "1.0"
serde_yml = "0.0.12"
dirs = "6.0"
notify = "8"
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tempfile = "3"
zip = "8"
url = "2"
libc = "0.2"
rand = "0.10.0"
cron = "0.15"
chrono = "0.4"
str0m = "0.16"
gethostname = "1.1.0"
open = "5.3.3"
urlencoding = "2.1.3"
flate2 = "1.1.9"
